@@ -1,6 +1,7 @@
 Panels 6.x-dev
 ==============
 hook_panels_pre_render() and hook_panels_post_render() getting empty displays.
+#865704: Editing mini panels styles failed badly due to missing piece of cache.
 
 Panels 6.x-3.7 (2010-Jul-26)
 ==============
